Replace non-jrt ModuleReference.location URLs
(cherry picked from commit 15c108f6717bbbfeddc16cffea0062fdadda907a)